# libTuxC

./: CMakeLists.txt  README.md
crt/: runtime.c
include/: alloca.h  assert.h  errno.h  limits.h  math.h  runtime.h  stdarg.h  stdbool.h  stddef.h  stdint.h  stdio.h  stdlib.h  stdnoreturn.h  string.h
include/cross/: crosscalls.h  stkcgen.h
include/linux/: syscalls.h
include/noncstd/: stdiofile.h  tuxcmac.h
lib/assert/: assert.c
lib/cpp/: printf.cpp
lib/cross/: crosscalls.c  stkcgen.c
lib/stdio/: ferror.c  fflush.c  fget.c  fopen.c  fread.c  fseek.c  fwrite.c  perror.c  putc.c  putchar.c  puts.c  setbuf.c  stdfd.c
lib/stdlib/: atoi.c  exit.c  malloc.c
lib/string/: memcpy.c  memcpyc.c  memmove.c  mempcpy.c  memset.c  strcpy.c  strdup.c  strerror.c  strlen.c
src/: main.c
